# iota.mam.rust

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  LICENCE  README.md
benches/: benchmark_mss.rs  benchmark_sponge.rs  benchmark_wots.rs
iota-mam-sys/: Cargo.toml  build.rs  wrapper.h
iota-mam-sys/bindings/: bindings_iota_entangled_c_develop.rs
iota-mam-sys/src/: lib.rs
src/: api.rs  bundle.rs  channel.rs  constants.rs  conversion.rs  definitions.rs  endpoint.rs  errors.rs  lib.rs  mam_prng.rs  mss.rs  mss_classic.rs  ntru.rs  prng.rs  psk.rs  sponge.rs  spongos.rs  trits.rs  types.rs  wots.rs
src/converter/: ascii.rs  errors.rs  mod.rs  trits.rs
src/mss/: internal.rs  mod.rs
