[package]
name = "mam-rs"
version = "0.1.0"
authors = ["Yolier Galan Tasse <gallegogt@gmail.com>"]
edition = "2018"
homepage = "https://github.com/gallegogt/iota.mam.rust"
repository = "https://github.com/gallegogt/iota.mam.rust"
keywords = [ "IOTA", "IoT", "MAM", "Messaging" ]
license = "MIT"
description = """
Rust wrapper for the IOTA MAM Library.
"""

[lib]
# could be `staticlib`  "dylib",  as well
crate-type = ["rlib", "staticlib"]
# crate-type = ["rlib", "dylib"]
# A flag for enabling documentation tests for this target. This is only relevant
# for libraries, it has no effect on other sections. This is used by
# `cargo test`.
# doctest = true
# # A flag for enabling documentation of this target. This is used by `cargo doc`.
# doc = true

[dependencies]
iota-constants = "^0.2"
iota-conversion = "^0.2"
iota-crypto = "^0.2"
troika-rust = "^0.1"
log = "^0.4"
env_logger = "^0.6"

[dev-dependencies]
criterion = "^0.3"

[[bench]]
name = "benchmark_mss"
harness = false

[[bench]]
name = "benchmark_wots"
harness = false

[[bench]]
name = "benchmark_sponge"
harness = false
