[package]
name = "iota-mam-sys"
version = "0.1.0"
authors = ["Yolier Galan Tasse <gallegogt@gmail.com>"]
edition = "2018"

homepage = "https://github.com/gallegogt/iota.mam.rust"
repository = "https://github.com/gallegogt/iota.mam.rust"
keywords = [ "IOTA", "IoT", "MAM", "messaging" ]
license = "MIT"
package = "build.rs"
description = """
Rust wrapper for the IOTA MAM Library.
"""

[features]
default = ["bundled", "build_bindgen"]
build_bindgen = ["bindgen"]
bundled = []

[build-dependencies]
semver = "^0.9"
bindgen = { version = "0.48.1", optional = true }