[package]
name = "iota-mam-sys"
version = "0.1.0"
authors = ["Yolier Galan Tasse <gallegogt@gmail.com>"]
edition = "2018"

homepage = "https://github.com/gallegogt/iota.mam.rust"
repository = "https://github.com/gallegogt/iota.mam.rust"
keywords = [ "IOTA", "IoT", "MAM", "messaging" ]
license = "MIT"
package = "build.rs"
description = """
Rust wrapper for the IOTA MAM Library.
"""

[lib]
# could be `staticlib` as well
crate-type = ["rlib", "staticlib"]
# A flag for enabling documentation tests for this target. This is only relevant
# for libraries, it has no effect on other sections. This is used by
# `cargo test`.
# doctest = true
# # A flag for enabling documentation of this target. This is used by `cargo doc`.
# doc = true


[features]
default = ["bundled", "build_bindgen"]
build_bindgen = ["bindgen"]
bundled = []

[dependencies]
libc = "^0.2"

[build-dependencies]
semver = "^0.9"
bindgen = { version = "0.48.1", optional = true }
glob = "^0.3"
